<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    tools:context=".presentation.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/dark_bg"
            app:cardCornerRadius="8dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textColor="@color/colorForText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/themeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/lightTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/light_theme"
                        android:textColor="@color/colorForText" />

                    <RadioButton
                        android:id="@+id/darkTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_theme"
                        android:textColor="@color/colorForText" />

                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/dark_bg"
            app:cardCornerRadius="8dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="@color/colorForText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/languageRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/englishLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textColor="@color/colorForText" />

                    <RadioButton
                        android:id="@+id/russianLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/russian"
                        android:textColor="@color/colorForText" />

                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="4dp"
            android:textColor="@color/colorForText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/dark_bg"
            app:cornerRadius="8dp"/>
    </LinearLayout>
</ScrollView>